Animations + Minor fixes
Attempted to put parallax effect on the images, but it seems to be not working as expected. Also deleted and resized some images to make the page look better. The blur effect is working fine, but the parallax effect is not showing up as expected. I will need to debug it further to see what is going wrong.

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -39,8 +39,13 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  filter: brightness(35%) blur(1px);
   top: 0;
+}
+
+.background img {
+  width: 100%;
+  height: 100%;
+  filter: brightness(50%);
   object-fit: cover;
 }
 
@@ -86,12 +91,14 @@
 /* Page 3 styling */
 
 .pics-section {
-  padding: 0 5rem; /* top/bottom, left/right */
-  gap: 1.5rem;
+  padding: 0 3rem; /* top/bottom, left/right */
+  gap: 0.2rem;
 }
 
 .pics-section .pics {
-  flex-basis: 20%;
+  flex-basis: 25%;
+  height: calc(((100vw - 6.6rem) / 3) - 2rem);
+  overflow-y: hidden;
 }
 
 .pics-section .pics img {
